# PanOS

./: CMakeLists.txt  KERNEL_VERIFICATION_REPORT.md  LICENSE  Makefile  README.md
cmake/: toolchain-x86_64-elf.cmake
grub/: grub.cfg
iso/boot/grub/: grub.cfg
kernel/arch/x86_64/: boot.asm  early_console.cpp  linker.ld  serial.cpp
kernel/arch/x86_64/include/arch/: early_console.hpp  serial.hpp
kernel/init/: kmain.cpp
